--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@
     height:100px;
     position:absolute;
     right:0px;
-    background: linear-gradient(to left bottom, black 49%, #F3F4F6 50%);
+    background: linear-gradient(to left bottom, #1b1b1b 49%, #F3F4F6 50%);
   }
   .skew-inv{
     width:100%;
@@ -33,4 +33,7 @@
     position:absolute;
     left:0px;
     background: linear-gradient(to right top, black 49%, #F3F4F6 50%);
+  }
+  .body{
+      background-image: url('./assets/polka-dots.svg');
   }
